--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,22 @@
         }
     ],
     "require": {
-        "yiche/simple-request": "1.0.0",
-        "yiche/json-to-arr-str":"2.0.0"
+        "yiche/json-to-arr-str":"2.0.0",
+        "yiche/simple-request": "dev-master"
     },
     "autoload": {
         "psr-4": {
             "ApolloConfig\\": "src/"
         }
     },
-    "minimum-stability":"dev",
-    "require-dev": {
-        "simple-request/simple-request": "dev-master"
-    }
+    "repositories": {
+        "3": {
+            "type": "path",
+            "url": "/home/wwwroot/personal-repository/simple-request",
+            "options": {
+                "symlink": true
+            }
+        }
+    },
+    "minimum-stability":"dev"
 }
